--- a/Stock_Prediction_Model.ipynb
+++ b/Stock_Prediction_Model.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOwCEl+h2VnTTdvIy3zBlNO",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyO1SHkvNt964vGe39Y2leE7"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/bhavyap1010/StockPrediction/blob/main/Stock_Prediction_Model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": 2,
@@ -604,15 +593,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# splitting stock data into training and test data\n",
-        "\n",
         "trainData = stockData[:int(len(stockData)*0.8)]\n",
         "testData = stockData[int(len(stockData)*0.8):]"
       ],
       "metadata": {
         "id": "oI953FRq6Fb2"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": []
     }
   ]
